--- a/.gitignore
+++ b/.gitignore
@@ -13,14 +13,19 @@
 
 # misc
 .DS_Store
+.env.test
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
+# Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+lerna-debug.log*
 
 #hardhat autoconfig
 .env
@@ -31,4 +36,26 @@ typechain
 #Hardhat files
 cache
 artifacts
+bin
+.vscode
+
+#scripts
+
+# Diagnostic reports (https://nodejs.org/api/report.html)
+report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# TypeScript v1 declaration files
+typings/
+
+# TypeScript cache
+*.tsbuildinfo
+
+# Optional npm cache directory
+.npm
 
