--- a/package.json
+++ b/package.json
@@ -1,36 +1,34 @@
 {
   "name": "metawood-marketplace",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
+  "repository": "https://github.com/d4n1sh404/metawood.git",
+  "license": "UNLICENSED",
+  "description": "Metawood NFT Marketplace Smart Contracts",
+  "scripts": {
+    "lint": "./node_modules/.bin/solhint contracts/**/*.sol",
+    "compile": "npx hardhat compile",
+    "test": "hardhat test",
+    "format": "./node_modules/.bin/prettier --write contracts/**/*.sol"
+  },
   "dependencies": {
     "@openzeppelin/contracts": "^4.5.0",
-    "dotenv": "^16.0.0"
-  },
-  "scripts": {},
-  "eslintConfig": {
-    "extends": [
-      "standard"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "dotenv": "^16.0.0",
+    "chai-as-promised": "^7.1.1"
   },
   "devDependencies": {
+    "@openzeppelin/hardhat-upgrades": "^1.16.1",
+    "@nomiclabs/hardhat-etherscan": "^3.0.3",
     "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.5.0",
     "chai": "^4.3.6",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.6.0",
-    "hardhat": "^2.9.1"
+    "hardhat": "^2.9.1",
+    "prettier": "^2.4.0",
+    "prettier-plugin-solidity": "^1.0.0-beta.18",
+    "solhint": "^3.3.6",
+    "solhint-plugin-prettier": "^0.0.5"
   }
 }
